src/components/Footer/BottomFooter/BottomFooter.css
.bottom_footer{
    width: 96%;
    margin: 0 17px;
    padding: 30px 0px 28px 0px;
    position: relative;
}

.bf_shop_words{
    width: 100%;
    height: 22px;
    font-size: 11.3px;
}

.bf_shop_words a{
    text-decoration: none;
    color: #0070c9;
}

.bf_shop_words a:hover{
    text-decoration: underline;
}

.usflag_div{
    width: 88px;
    height: 16px;
    font-size: 11.3px;
    margin-top: 6px;
    display: flex;
    justify-content: space-between;
    color: #666;
    line-height: 16px;
    cursor: pointer;
}

.usflag_div:hover{
    text-decoration: underline;
}

.usflag_img{
    width: 16px;
    height: 16px;
    background: url('https://images.apple.com/ac/flags/1/images/us/32.png')center no-repeat;
    background-size: cover;
}

.copyright_p{
    margin-top: 16px;
    font-size: 11.3px;
}

.bottom_footer_list{
    width: 415px;
    font-size: 11.3px;
    margin-top: 8px;
    display: flex;
    justify-content: space-between;
    color: #666;
}

.bottom_footer_list li:hover{
    cursor: pointer;
    text-decoration: underline;
}

@media(min-width: 770px){
    
    .bf_shop_words{
        border-bottom: 1px solid #ddd;
    }

    .usflag_div{
        position: absolute;
        right: 0px;
        top: 52px;
    }

    .copyright_p{
        margin-top: 10px;
    }

}

@media(min-width: 850px){
    .bottom_footer_list{
        position: absolute;
        left: 264px;
        bottom: 28px;
    }
}

@media(min-width: 1050px){
    
    .bottom_footer{
        width: 980px;
        margin: 0 auto;
    }

}

